[package]
name = "prio-graph"
authors = ["Andrew Fitzgerald <apfitzge@gmail.com>"]
version = "0.2.0"
description = "A lazily populated directed acyclic graph with top-level priority ordering"
readme = "README.md"
homepage = "https://github.com/apfitzge/prio-graph"
repository = "https://github.com/apfitzge/prio-graph"
license-file = "LICENSE"
edition = "2021"
include = ["src/*.rs", "Cargo.toml"]

[dependencies]

[dev-dependencies]
rand = { version = "0.8.4" }
