[package]
name = "prio-graph"
authors = ["Andrew Fitzgerald <apfitzge@gmail.com>"]
version = "0.2.1"
description = "A lazily populated directed acyclic graph with top-level priority ordering"
readme = "README.md"
homepage = "https://github.com/apfitzge/prio-graph"
repository = "https://github.com/apfitzge/prio-graph"
license-file = "LICENSE"
edition = "2021"
include = ["src/*.rs", "Cargo.toml"]

[dependencies]
ahash = { version = "0.8.11" }

[dev-dependencies]
criterion = { version = "0.5.1" }
rand = { version = "0.8.4" }

[[bench]]
name = "prio_graph"
harness = false
